# lumina-ai-learning

./: .dockerignore  .env.example  .env.local  .firebaserc  .gitignore  BUILD_MANIFEST.md  COMPLETION_MANIFEST.md  DASHBOARD_CHECK_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_QUICK_START.md  DEVELOPER_GUIDE.md  DOCKER_DISABLED.md  DOCKER_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  ENV_VARIABLES.md  FEATURES_DOCUMENTATION.md  FINAL_PROJECT_SUMMARY.md  FIREBASE_SETUP.md  FIXES_SUMMARY.md  FOLDER_STRUCTURE.txt  GITHUB_ACTIONS_FIX.md  GOLDEN_THEME_UPDATE.md  LOCAL_SETUP.md  LUMINA_EVOLUTION_PLAN.md  PORT_CHANGED_TO_1234.md  PROGRESS_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  REDESIGN_BLUEPRINT.md  REDESIGN_SUMMARY.md  START_HERE.md  TODO.md  TROUBLESHOOTING.md  VERCEL_FIX.md  VERCEL_SETUP.md  (+28 more)
backend/: .coverage  .env  .env.example  Dockerfile  README-Phase4.md  __init__.py  alembic.ini  auth.py  config.py  course_content_endpoints.py  db.py  main.py  main_fixed.py  models.py  models_phase6.py  models_phase7.py  models_rag.py  monitoring_endpoints.py  phase6_endpoints.py  phase7_endpoints.py  pyproject.toml  rag_endpoints.py  requirements.txt  run_tests.ps1  run_tests.sh  setup.cfg  streaming_endpoints.py  test_difficulty.py  test_difficulty_comprehensive.py
backend/alembic/: env.py
backend/docs/: pathway_enhancements.md  phase1.md  phase2.md  phase3.md  phase5.md  phase6.md  phase7.md  phase8.md
backend/lumnia_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/services/: base.py  (+35 more)
(+1272 files in other folders)
