[metadata]
name = lumnia-backend
version = 1.0.0
description = Lumnia AI-powered Learning Management System Backend
author = Lumnia Team
author_email = team@lumnia.ai

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.68.0
    uvicorn>=0.15.0
    sqlalchemy>=1.4.0
    pydantic>=1.8.0
    loguru>=0.5.3
    pytest>=6.0.0
    pytest-asyncio>=0.15.0
    pytest-cov>=2.0.0
    httpx>=0.18.0

[options.packages.find]
where = .
exclude =
    tests*